welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: type mismatch;
 found   : Unit
 required: Boolean
                            recule(6)
                                  ^